OWN-296 Medium: PublicKeyCredential

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@teqfw/test": "latest",
     "@teqfw/ui-quasar": "latest",
     "@teqfw/web-api": "latest",
+    "mysql2": "latest",
     "pg": "latest"
   },
   "devDependencies": {
